testcases/errors/override2.boo
"""
override2(4, 15): BCE0074: Method 'System.Object.ToString' has 'System.String' as its return type, not 'System.Int32'. 
"""
class Person:
	override def ToString():
		return 3
